--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gis_ss21",
   "version": "1.0.0",
-  "description": "<!DOCTYPE html>\r <html>\r <head>\r <meta charset=\"utf-8\">\r <title>Annika</title>\r </head>",
+  "description": "jhkjn",
   "main": "index.js",
   "scripts": {
-    "start": "node Aufgabe3.2/serverscript.js"
+    "start": "node ./Aufgabe3.2/serverscript.js"
   },
   "repository": {
     "type": "git",
