--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "jhkjn",
   "main": "index.js",
   "scripts": {
-    "start": "node ./Aufgabe3.2/serverscript.js"
+    "start": "node ./Aufgabe3.2/server/script.js"
   },
   "repository": {
     "type": "git",
