--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "jhkjn",
   "main": "index.js",
   "scripts": {
-    "start": "node ./Aufgabe3.2/server/script.js"
+    "start": "node ./Aufgabe3.4/server/script.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/annikakoeni/GIS_SS21#readme",
   "dependencies": {
-    "@types/node": "^15.6.1"
+    "@types/mongodb": "^3.6.18",
+    "@types/node": "^15.6.1",
+    "mongodb": "^3.6.9"
   }
 }
